--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -9,6 +9,10 @@
 @font-family-sans-serif: 'Open Sans', sans-serif;
 @headings-font-weight:    400;
 
+@my-dark-font-color: #232323;
+@my-light-font-color: #a48668;
+@my-hover-color: #f0d8a8;
+
 /* Navbar */
 @my-navbar-height: 50px; 
 @my-navbar-margin-bottom: 10px;
@@ -16,5 +20,6 @@
 /* Sign in / Porgot password / change password */ 
 @my-form-max-width: 400px;
 
-/* Content */
+/* Background colors */
+@my-dark-bg-color: #232323;
 @my-content-bg-color: rgba(255, 255, 255, 1);
